--- a/senjo/CMakeLists.txt
+++ b/senjo/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.1)
+
+file(GLOB SENJO_HDR *.h)
+file(GLOB SENJO_SRC *.cpp)
+
 project(senjo CXX)
-
-file(GLOB OBJ_HDR *.h)
-file(GLOB OBJ_SRC *.cpp)
-
-include_directories(.)
-add_library(${PROJECT_NAME} STATIC ${OBJ_HDR} ${OBJ_SRC})
+set(CMAKE_CXX_STANDARD 11)
+add_library(${PROJECT_NAME} STATIC ${SENJO_HDR} ${SENJO_SRC})
 
